...
            "state" : "translated",
            "value" : "Ein 6-stelliger Code wurde an %@ gesendet."
          }
        }
      }
    },
    "Access code" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anmeldecode"
          }
...
            "state" : "translated",
            "value" : "Diese Karte konnte nicht beschrieben werden. Eine andere Karte nehmen."
          }
        }
      }
    },
    "Create zone" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zone erstellen"
          }
...
            "state" : "translated",
            "value" : "Zone wird verschoben…"
          }
        }
      }
    },
    "NFC TimeSheets" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "NFC TimeSheets"
          }
...
            "state" : "translated",
            "value" : "Betreiber"
          }
        }
      }
    },
    "Operator code" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anmeldecode"
          }
...
            "state" : "translated",
            "value" : "Seite"
          }
        }
      }
    },
    "Phone number" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Telefonnummer"
          }
...
            "state" : "translated",
            "value" : "Karte scannen"
          }
        }
      }
    },
    "Send code" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Code senden"
          }
...
            "state" : "translated",
            "value" : "Mit Anmeldecode anmelden"
          }
        }
      }
    },
    "Sign in with code" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anmelden"
          }
...
            "state" : "translated",
            "value" : "Büro wird informiert…"
          }
        }
      }
    },
    "Test a tag" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tag prüfen"
          }
...
            "state" : "translated",
            "value" : "Wird geschrieben"
          }
        }
      }
    },
    "Write" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schreiben"
          }
...
            "state" : "translated",
            "value" : "Neue Karte schreiben und Zone verschieben"
          }
        }
      }
    },
    "Write a tag" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tag beschreiben"
          }
        }
      }
    },
    "Write another card" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Weitere Karte schreiben"
          }
...
            "state" : "translated",
            "value" : "Schreiben Sie es in Ihren eigenen Worten, zum Beispiel: zwei Mopps und eine große Flasche Glasreiniger"
          }
        }
      }
    },
    "Write or test tags" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Karten schreiben oder prüfen"
          }
...
